--- a/src/style.css
+++ b/src/style.css
@@ -1,6 +1,7 @@
 body {
   font-family: sans-serif;
   line-height: 1.5;
+  margin: 0;
 }
 
 h1,
@@ -22,4 +23,11 @@ ol {
 img {
   display: block;
   max-width: 100%;
+}
+
+button {
+  font-size: 16px;
+  line-height: 20px;
+  cursor: pointer;
+  border-radius: 12px;
 }
