--- a/src/style.css
+++ b/src/style.css
@@ -1,7 +1,14 @@
 body {
-  font-family: sans-serif;
+  font-family: 'Manrope', sans-serif;
   line-height: 1.5;
   margin: 0;
+  padding: 0;
+}
+
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
 }
 
 h1,
