--- a/src/components/CatalogList/CatalogList.module.css
+++ b/src/components/CatalogList/CatalogList.module.css
@@ -4,9 +4,23 @@
   gap: 48px 32px;
   list-style: none;
   justify-content: center;
-  padding: 0 120px 48px;
+  padding: 0 120px;
 }
 
 .loader {
   margin: 20px auto;
+}
+
+.noCarsBrand {
+  padding: 24px;
+}
+.noCarsBrandText {
+  font-size: 18px;
+  color: #101828;
+  text-align: center;
+  align-items: center;
+}
+.loading {
+  margin: 80px auto 124px;
+  padding: 12px 38px;
 }
