--- a/src/components/App.module.css
+++ b/src/components/App.module.css
@@ -1,3 +1,9 @@
 .container {
     width: 100%;
 }
+.loading {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 80vh;
+}   
