--- a/src/components/CarCard/CarCard.module.css
+++ b/src/components/CarCard/CarCard.module.css
@@ -27,6 +27,8 @@
 }
 
 .icon {
+  width: 16px;
+  height: 16px;
   fill: currentColor;
   transition: fill 0.25s ease;
 }
@@ -93,13 +95,10 @@
   color: #fff;
   text-decoration: none;
   font-size: 16px;
-  line-height: 20px;
+  line-height: 1.25;
   transition: background-color 0.25s ease, color 0.25s ease;
 }
 .btn:hover,
 .btn:focus {
   background-color: #0b44cd;
-}
-.loading {
-  margin: 80px auto 124px;
 }
